<resources>
    <string name="app_name">E-Point</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="login">SIGN IN</string>
    <string name="register">Sign Up</string>
    <string name="success">Welcome</string>
    <string name="logout">Logout</string>
    <string name="catat">Catat</string>
    <string name="ketcatat">Form mencatat pelanggaran</string>
    <string name="laporan">Laporan</string>
    <string name="ketlaporan">Laporan pencatatan pelanggaran</string>
    <string name="help">Bantuan</string>
    <string name="kethelp">Penjelasan mengenai Aplikasi</string>
    <string name="about">Tentang Kami</string>
    <string name="ketabout">Berisi biodata Pengembang</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">E-Point</string>
    <string name="slide_1_desc">Aplikasi pencatat poin pelanggaran siswa</string>

    <string name="slide_2_title">Login</string>
    <string name="slide_2_desc">Login sebagai Kesiswaan dan aplikasi siap digunakan</string>

    <string name="slide_3_title">Time</string>
    <string name="slide_3_desc">Jadikan waktu anda lebih efisien bersama E-point</string>

    <string name="slide_4_title">Bye Book</string>
    <string name="slide_4_desc">Tinggalkan buku pelanggaran, beralihlah ke E-point</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="atur_tanggal">Atur tanggal</string>
    <string name="name_a">Aisyatush Shofiah</string>
    <string name="name_l">Luviana Dewi I.</string>
    <string name="name_r">Ridhwan Rofianto</string>
    <string name="name_s">Salsadila Nanda Octavia</string>
</resources>
